removed DXL deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,11 +124,11 @@ if(DRIVE_ROBOT)
 endif(DRIVE_ROBOT)
 
 #driver with no simulator
-add_executable(PacerDriver ${SOURCES} ${CMAKE_SOURCE_DIR}/example/pacer/driver.cpp)
-target_link_libraries(PacerDriver ${REQURED_LIBS} dxl)
-set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-install(TARGETS PacerDriver DESTINATION ${CMAKE_SOURCE_DIR}/example/pacer)
-install(TARGETS PacerDriver DESTINATION bin)
+#add_executable(PacerDriver ${SOURCES} ${CMAKE_SOURCE_DIR}/example/pacer/driver.cpp)
+#target_link_libraries(PacerDriver ${REQURED_LIBS} dxl)
+#set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+#install(TARGETS PacerDriver DESTINATION ${CMAKE_SOURCE_DIR}/example/pacer)
+#install(TARGETS PacerDriver DESTINATION bin)
 
 # Moby Plugin
 if(USE_MOBY)
@@ -141,7 +141,7 @@ if(USE_MOBY)
   endif(VISUALIZE_MOBY)
 
   add_library(PacerMobyPlugin MODULE ${CMAKE_SOURCE_DIR}/example/control-moby/pacer-plugin.cpp ${VISUALIZE_SRCS} )
-  target_link_libraries(PacerMobyPlugin ${REQURED_LIBS} ${VISUALIZE_LIBS} dxl)
+  target_link_libraries(PacerMobyPlugin ${REQURED_LIBS} ${VISUALIZE_LIBS})
   set_target_properties(PacerMobyPlugin PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
   install(TARGETS PacerMobyPlugin DESTINATION ${CMAKE_SOURCE_DIR}/example/control-moby)
   install(TARGETS PacerMobyPlugin DESTINATION lib)
