fixed build structure --now with less problems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,176 +5,216 @@ project(Pacer)
 include (CheckIncludeFiles)
 include (CheckLibraryExists)
 
-set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMakeModules)
-set (PROJECT_SRC_DIR .)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/CMakeModules)
+
+# setup include directories
+include_directories("include")
+set(PROJECT_SRC_DIR ./src)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
 
-find_package(Boost REQUIRED COMPONENTS system)
-include_directories(${Boost_INCLUDE_DIRS})
-link_directories(${Boost_LIBRARY_DIRS})
+#find BOOST libraries
+set(Boost_ADDITIONAL_VERSIONS "1.55.0" "1.56.0")
+find_package(Boost COMPONENTS system REQUIRED)
+link_directories(${BOOST_LIBRARY_DIRS})
+include_directories(SYSTEM ${BOOST_INCLUDE_DIR})
+
+#find OSG
+find_package(OSG)
+link_directories(${OSG_LIBRARY_DIRS})
+include_directories(SYSTEM ${OSG_INCLUDE_DIR})
+
+#add ravelin
+find_package(Ravelin REQUIRED)
+link_directories(${RAVELIN_LIBRARY_DIRS})
+include_directories(SYSTEM ${RAVELIN_INCLUDE_DIRS})
+
+#add moby
+find_package(Moby REQUIRED)
+link_directories(${MOBY_LIBRARY_DIRS})
+include_directories(SYSTEM ${MOBY_INCLUDE_DIRS})
+
 
 option(BUILD_SHARED_LIBS "Build as a shared library?" ON)
-
 # these are the setting for the in-source compiler flow control
-option(VISUALIZE_MOBY "Display Moby Visualizations?" OFF)
-option(SPLITTING_METHOD "Use Splitting Methods to solve QPs?" OFF)
+option(USE_OSG_DISPLAY "Display Visualizations?" OFF)
+#option(SPLITTING_METHOD "Use Splitting Methods to solve QPs?" OFF)
 option(LOGGING "Logging" ON)
 option(CONSOLE "GLConsole" OFF)
 option(TIMING "use ctime timing functions" OFF)
+option(USE_DXL "use dynamixel drivers" OFF)
 option(USE_MOBY "build Moby plugin" OFF)
 option(USE_GAZEBO "build Gazebo plugin" OFF)
-option(RANDOM_FRICTION "Randomize friction mu = {0.1 .. 1.4}" OFF)
 option(DRIVE_ROBOT "Use drive-robot controller plugin" OFF)
+option(BUILD_EXAMPLES "Build simulation examples" OFF)
 
 # fix the C++ linking error on 64-bit Linux
-set (CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} -ldl")
+set(CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} -ldl")
 
-if(RANDOM_FRICTION)
+IF(RANDOM_FRICTION)
   add_definitions( -DRANDOM_FRICTION)
-endif(RANDOM_FRICTION)
+ENDIF(RANDOM_FRICTION)
 
 
-if(CONSOLE)
+IF(CONSOLE)
   add_definitions( -DUSE_GLCONSOLE)
-endif(CONSOLE)
+ENDIF(CONSOLE)
 
-# you may have to add additional includes in here...
 add_definitions(-DBUILD_DOUBLE)
-add_definitions(-DUSE_OSG)
 add_definitions(-DSAFESTATIC=static)
 add_definitions(-DUSE_GLPK)
 
-if(TIMING)
+IF(TIMING)
   add_definitions( -DTIMING)
-endif(TIMING)
+ENDIF(TIMING)
 
-if(LOGGING)
+IF(LOGGING)
   add_definitions( -DLOGGING )
-endif(LOGGING)
+ENDIF(LOGGING)
 
-if(SPLITTING_METHOD)
+IF(SPLITTING_METHOD)
   add_definitions( -DSPLITTING_METHOD )
-endif(SPLITTING_METHOD)
+ENDIF(SPLITTING_METHOD)
 
 include_directories(
                     include
                     /usr/include
-                    /usr/include/libxml2
                     /usr/local/include
-                    ${Boost_INCLUDE_DIR}
-                    /opt/local/include
-                    /opt/X11/include
-                    ../../ThirdParty/alglib/src
-                    /Applications/MATLAB_R2013a.app/extern/include
                     )
 
 link_directories(
+                  /usr/lib
                   /usr/local/lib
-                  /opt/X11/lib
-/Applications/MATLAB_R2013a.app/extern/lib/maci64
                   )
 
-set(SOURCES-BASIC
-            src/output.cpp
-            src/robot.cpp
-            src/kinematics.cpp
-            src/utilities.cpp
-            src/variables.cpp
+set(SOURCES
+            output.cpp
+            robot.cpp
+            kinematics.cpp
+            utilities.cpp
+            variables.cpp
+            inverse_dynamics.cpp
+            stabilization.cpp
+            splines.cpp
+            solve_qp.cpp
+            solve_lcp_fast.cpp
+            controller.cpp
+            locomotion.cpp
+            wcpg.cpp
            )
 
-set(SOURCES ${SOURCES-BASIC}
-            src/inverse_dynamics.cpp
-            src/stabilization.cpp
-            src/splines.cpp
-            src/solve_qp.cpp
-            src/solve_lcp_fast.cpp
-            src/controller.cpp
-            src/locomotion.cpp
-            src/wcpg.cpp
-           )
+# prepend "src/" to each source file
+FOREACH(i ${SOURCES})
+  set(LIBSOURCES ${LIBSOURCES} "${CMAKE_SOURCE_DIR}/src/${i}")
+ENDFOREACH(i)
+
+# look for DXL
+find_library(DXL_FOUND dxl /usr/local/lib /usr/lib)
+IF(USE_DXL AND DXL_FOUND)
+  set(EXTRA_LIBS ${EXTRA_LIBS} dxl)
+  add_definitions (-DUSE_DXL)
+ENDIF(USE_DXL AND DXL_FOUND)
+
+# libxml
+IF(LIBXML2_FOUND)
+  target_link_libraries (Pacer ${LIBXML2_LIBRARIES})
+ENDIF(LIBXML2_FOUND)
+
+# cvars
+IF(CVARS_FOUND)
+  target_link_libraries (Pacer ${LIBXML2_LIBRARIES})
+ENDIF(CVARS_FOUND)
+
+set(REQLIBS Moby Ravelin)
+
+add_library(Pacer ${LIBSOURCES})
+target_link_libraries(Pacer ${REQLIBS} Opt OpenThreads cvars)
+set_target_properties(Pacer PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+install(TARGETS Pacer DESTINATION lib)
 
 # install include dirs
 install(DIRECTORY ${CMAKE_SOURCE_DIR}/include/Pacer DESTINATION include)
 
-set(REQURED_LIBS Moby Ravelin)
+set(REQLIBS ${REQLIBS} Pacer)
 
-add_library(Pacer ${SOURCES})
-target_link_libraries(Pacer ${REQURED_LIBS} Opt OpenThreads cvars)
-set_target_properties(Pacer PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-install(TARGETS Pacer DESTINATION lib)
-
-# PACER MODEL
-add_library(PacerModel ${SOURCES-BASIC})
-target_link_libraries(PacerModel Moby Ravelin Opt OpenThreads cvars ${VISUALIZE_LIBS})
-set_target_properties(PacerModel PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-install(TARGETS PacerModel DESTINATION lib)
-
-set(REQURED_LIBS ${REQURED_LIBS} Pacer)
 # EXAMPLES
-
+IF(BUILD_EXAMPLES)
 # Drive ROBOT
-if(DRIVE_ROBOT)
+IF(DRIVE_ROBOT)
+  #  add_subdirectory( example/drive_robot )
   add_definitions(-DDRIVE_ROBOT)
   add_library(PacerDriveRobotPlugin ${CMAKE_SOURCE_DIR}/example/drive-robot/control.cpp)
-  target_link_libraries(PacerDriveRobotPlugin ${REQURED_LIBS})
+  target_link_libraries(PacerDriveRobotPlugin ${REQLIBS})
   set_target_properties(PacerDriveRobotPlugin PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
   install(TARGETS PacerDriveRobotPlugin DESTINATION ${CMAKE_SOURCE_DIR}/example/drive-robot)
   install(TARGETS PacerDriveRobotPlugin DESTINATION lib)
-  set(REQURED_LIBS ${REQURED_LIBS} PacerDriveRobotPlugin)
-endif(DRIVE_ROBOT)
+  set(REQLIBS ${REQLIBS} PacerDriveRobotPlugin)
+ENDIF(DRIVE_ROBOT)
 
-#driver with no simulator
-add_executable(PacerDriver ${SOURCES} ${CMAKE_SOURCE_DIR}/example/pacer/driver.cpp)
-target_link_libraries(PacerDriver ${REQURED_LIBS} dxl)
-set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-install(TARGETS PacerDriver DESTINATION ${CMAKE_SOURCE_DIR}/example/pacer)
-install(TARGETS PacerDriver DESTINATION bin)
 
 # Moby Plugin
-if(USE_MOBY)
-  if(VISUALIZE_MOBY)
-    set(VISUALIZE_SRCS ${CMAKE_SOURCE_DIR}/example/control-moby/visualize.cpp)
-    set(VISUALIZE_LIBS glut osg osgDB GLU ${GLUT_LIBRARIES} ${GLU_LIBRARIES} ${OPENGL_LIBRARIES})
-    FIND_PACKAGE( GLUT REQUIRED )
-    FIND_PACKAGE( OpenGL REQUIRED )
-    add_definitions( -DVISUALIZE_MOBY )
-  endif(VISUALIZE_MOBY)
-
-  add_library(PacerMobyPlugin MODULE ${CMAKE_SOURCE_DIR}/example/control-moby/pacer-plugin.cpp ${VISUALIZE_SRCS} )
-  target_link_libraries(PacerMobyPlugin ${REQURED_LIBS} ${VISUALIZE_LIBS} dxl)
+IF(USE_MOBY)
+  add_library(PacerMobyPlugin MODULE ${CMAKE_SOURCE_DIR}/example/control-moby/pacer-plugin.cpp)
+# osg
+IF(USE_OSG_DISPLAY AND OSG_FOUND)
+    target_link_libraries (PacerMobyPlugin ${OSG_LIBRARIES})
+    target_link_libraries (PacerMobyPlugin ${OSGVIEWER_LIBRARIES})
+    target_link_libraries (PacerMobyPlugin ${OSGDB_LIBRARIES})
+    target_link_libraries (PacerMobyPlugin ${OSGGA_LIBRARIES})
+    target_link_libraries (PacerMobyPlugin ${OPENTHREADS_LIBRARY})
+    target_link_libraries (PacerMobyPlugin ${OSGUTIL_LIBRARIES})
+    target_link_libraries (PacerMobyPlugin ${OSGMANIPULATOR_LIBRARIES})
+    add_definitions (-DUSE_OSG_DISPLAY)
+  ENDIF(USE_OSG_DISPLAY AND OSG_FOUND)
+  target_link_libraries(PacerMobyPlugin ${REQLIBS} ${EXTRA_LIBS})
   set_target_properties(PacerMobyPlugin PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
   install(TARGETS PacerMobyPlugin DESTINATION ${CMAKE_SOURCE_DIR}/example/control-moby)
-  install(TARGETS PacerMobyPlugin DESTINATION lib)
-endif(USE_MOBY)
+ENDIF(USE_MOBY)
 
 # Gazebo Plugin
-if(USE_GAZEBO)
-#  if(VISUALIZE_GAZEBO)
-#    set(VISUALIZE_SRCS ${CMAKE_SOURCE_DIR}/example/control-gazebo/visualize.cpp)
-#    set(VISUALIZE_LIBS glut osg osgDB GLU ${GLUT_LIBRARIES} ${GLU_LIBRARIES} ${OPENGL_LIBRARIES})
-#    FIND_PACKAGE( GLUT REQUIRED )
-#    FIND_PACKAGE( OpenGL REQUIRED )
-#    add_definitions( -DVISUALIZE_GAZEBO )
-#  endif(VISUALIZE_GAZEBO)
+IF(USE_GAZEBO)
+  add_library(PacerGazeboPlugin SHARED ${CMAKE_SOURCE_DIR}/example/control-gazebo/pacer-plugin.cpp)
+# NO USE FOR OSG YET
+# IF(USE_OSG_DISPLAY AND OSG_FOUND)
+#   target_link_libraries (PacerGazeboPlugin ${OSG_LIBRARIES})
+#   target_link_libraries (PacerGazeboPlugin ${OSGVIEWER_LIBRARIES})
+#   target_link_libraries (PacerGazeboPlugin ${OSGDB_LIBRARIES})
+#   target_link_libraries (PacerGazeboPlugin ${OSGGA_LIBRARIES})
+#   target_link_libraries (PacerGazeboPlugin ${OPENTHREADS_LIBRARY})
+#   target_link_libraries (PacerGazeboPlugin ${OSGUTIL_LIBRARIES})
+#   target_link_libraries (PacerGazeboPlugin ${OSGMANIPULATOR_LIBRARIES})
+#   add_definitions (-DUSE_OSG_DISPLAY)
+# ENDIF(USE_OSG_DISPLAY AND OSG_FOUND)
 
   include (FindPkgConfig)
-  if (PKG_CONFIG_FOUND)
+  IF(PKG_CONFIG_FOUND)
     pkg_check_modules(GAZEBO gazebo)
-  endif(PKG_CONFIG_FOUND)
+  ENDIF(PKG_CONFIG_FOUND)
   include_directories(${GAZEBO_INCLUDE_DIRS})
   link_directories(${GAZEBO_LIBRARY_DIRS})
 
-  add_library(PacerGazeboPlugin SHARED ${CMAKE_SOURCE_DIR}/example/control-gazebo/pacer-plugin.cpp)
-  target_link_libraries(PacerGazeboPlugin ${REQURED_LIBS} ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES} protobuf)
-  install(TARGETS PacerGazeboPlugin DESTINATION lib)
+  target_link_libraries(PacerGazeboPlugin ${REQLIBS} ${GAZEBO_LIBRARIES} ${BOOST_LIBRARIES} ${Boost_SYSTEM_LIBRARY} protobuf ${EXTRA_LIBS})
+  install(TARGETS PacerGazeboPlugin DESTINATION ${CMAKE_SOURCE_DIR}/example/control-gazebo)
 
   add_library(contact SHARED ${CMAKE_SOURCE_DIR}/example/control-gazebo/contact-plugin.cpp)
-  target_link_libraries(contact Pacer ${GAZEBO_LIBRARIES} ${Boost_LIBRARIES} protobuf)
-  install(TARGETS contact DESTINATION ${CMAKE_SOURCE_DIR}/example/control-gazebo)
-endif(USE_GAZEBO)
 
-# Test: Calling PacerModel only instead of using controller features
-  add_executable(test-pacer-model ${CMAKE_SOURCE_DIR}/example/pacer-model/test.cpp)
-  target_link_libraries(test-pacer-model PacerModel Ravelin)
-  install(TARGETS test-pacer-model DESTINATION ${CMAKE_SOURCE_DIR}/example/pacer-model)
+  target_link_libraries(contact Pacer ${GAZEBO_LIBRARIES} ${BOOST_LIBRARIES} ${Boost_SYSTEM_LIBRARY} protobuf)
+  install(TARGETS contact DESTINATION ${CMAKE_SOURCE_DIR}/example/control-gazebo)
+ENDIF(USE_GAZEBO)
+
+#driver with no simulator
+enable_testing()
+add_executable(PacerDriver ${CMAKE_SOURCE_DIR}/example/driver.cpp)
+target_link_libraries(PacerDriver ${REQLIBS} ${EXTRA_LIBS})
+set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+add_test(NAME test_pacer COMMAND PacerDriver ${CMAKE_SOURCE_DIR}/example/models/links-moby/model.xml ${CMAKE_SOURCE_DIR}/example/models/links-moby/vars.xml 1.0)
+
+#IF(USE_MOBY)
+#  add_test(moby_test  [<arg>...])
+#ENDIF(USE_MOBY)
+#IF(USE_GAZEBO)
+#  add_test(gazebo_test gzserver ${CMAKE_SOURCE_DIR}/example/models/links/model.world)
+#ENDIF(USE_GAZEBO)
+ENDIF(BUILD_EXAMPLES)
+
 
