fixed qhull find

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,13 +20,13 @@ link_directories(${BOOST_LIBRARY_DIRS})
 include_directories(${BOOST_INCLUDE_DIR})
 
 #find OSG
-find_package (osg)
-find_package (osgViewer)
-find_package (osgDB)
-find_package (osgGA)
-find_package (osgFX)
-find_package (osgUtil)
-find_package (OpenThreads)
+find_package (osg QUIET)
+find_package (osgViewer QUIET)
+find_package (osgDB QUIET)
+find_package (osgGA QUIET)
+find_package (osgFX QUIET)
+find_package (osgUtil QUIET)
+find_package (OpenThreads QUIET)
 link_directories(${OSG_LIBRARY_DIRS})
 include_directories(${OSG_INCLUDE_DIR})
 
