converting robot.cpp functions to new data-storage mechanisms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,21 +185,21 @@ IF(USE_OSG_DISPLAY AND OSG_FOUND)
     target_link_libraries (PacerMobyPlugin ${OSGMANIPULATOR_LIBRARIES})
     target_link_libraries (PacerMobyPlugin OpenThreads)
    
-    target_link_libraries (PacerMobyDriver ${OSG_LIBRARIES})
-    target_link_libraries (PacerMobyDriver ${OSGVIEWER_LIBRARIES})
-    target_link_libraries (PacerMobyDriver ${OSGDB_LIBRARIES})
-    target_link_libraries (PacerMobyDriver ${OSGGA_LIBRARIES})
-    target_link_libraries (PacerMobyDriver ${OPENTHREADS_LIBRARY})
-    target_link_libraries (PacerMobyDriver ${OSGUTIL_LIBRARIES})
-    target_link_libraries (PacerMobyDriver ${OSGMANIPULATOR_LIBRARIES})
-    target_link_libraries (PacerMobyDriver OpenThreads)
+   # target_link_libraries (PacerMobyDriver ${OSG_LIBRARIES})
+   # target_link_libraries (PacerMobyDriver ${OSGVIEWER_LIBRARIES})
+   # target_link_libraries (PacerMobyDriver ${OSGDB_LIBRARIES})
+   # target_link_libraries (PacerMobyDriver ${OSGGA_LIBRARIES})
+   # target_link_libraries (PacerMobyDriver ${OPENTHREADS_LIBRARY})
+   # target_link_libraries (PacerMobyDriver ${OSGUTIL_LIBRARIES})
+   # target_link_libraries (PacerMobyDriver ${OSGMANIPULATOR_LIBRARIES})
+   # target_link_libraries (PacerMobyDriver OpenThreads)
     add_definitions (-DUSE_OSG_DISPLAY)
   ENDIF(USE_OSG_DISPLAY AND OSG_FOUND)
   target_link_libraries(PacerMobyPlugin ${REQLIBS} ${EXTRA_LIBS})
   set_target_properties(PacerMobyPlugin PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
   install(TARGETS PacerMobyPlugin DESTINATION ${CMAKE_SOURCE_DIR}/example/control-moby)
   
-  target_link_libraries(PacerMobyDriver ${REQLIBS} ${EXTRA_LIBS})
+  #target_link_libraries(PacerMobyDriver ${REQLIBS} ${EXTRA_LIBS})
 ENDIF(USE_MOBY)
 
 # Gazebo Plugin
@@ -229,11 +229,11 @@ IF(USE_GAZEBO)
 ENDIF(USE_GAZEBO)
 
 #driver with no simulator
-enable_testing()
-add_executable(PacerDriver ${CMAKE_SOURCE_DIR}/example/driver.cpp)
-target_link_libraries(PacerDriver ${REQLIBS} ${EXTRA_LIBS})
-set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
-add_test(NAME test_pacer COMMAND PacerDriver ${CMAKE_SOURCE_DIR}/example/models/links-moby/model.xml ${CMAKE_SOURCE_DIR}/example/models/links-moby/vars.xml 1.0)
+#enable_testing()
+#add_executable(PacerDriver ${CMAKE_SOURCE_DIR}/example/driver.cpp)
+#target_link_libraries(PacerDriver ${REQLIBS} ${EXTRA_LIBS})
+#set_target_properties(PacerDriver PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+#add_test(NAME test_pacer COMMAND PacerDriver ${CMAKE_SOURCE_DIR}/example/models/links-moby/model.xml ${CMAKE_SOURCE_DIR}/example/models/links-moby/vars.xml 1.0)
 
 #IF(USE_MOBY)
 #  add_test(moby_test  [<arg>...])
